tests/negative/gold/mixin-cycle-test.gold
tests/negative/mixin-cycle-test.toit:5:7: error: Cycle in mixin chain
mixin A extends B:
      ^
tests/negative/mixin-cycle-test.toit:5:17: error: This clause contributes to the cycle
mixin A extends B:
                ^
tests/negative/mixin-cycle-test.toit:6:17: error: This clause contributes to the cycle
mixin B extends A:
                ^
tests/negative/mixin-cycle-test.toit:13:7: error: Cycle in mixin chain
mixin G extends F with H:
      ^
tests/negative/mixin-cycle-test.toit:13:24: error: This clause contributes to the cycle
mixin G extends F with H:
                       ^
tests/negative/mixin-cycle-test.toit:14:24: error: This clause contributes to the cycle
mixin H extends F with G:
                       ^
Compilation failed
